kubernetes/apps/freshrss/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: freshrss
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
